# LitEngine

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LitEngine.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini  lit_engine.vcxproj  lit_engine.vcxproj.filters  log.txt  runnable.cpp
application/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LiteEngine.Application.sln  application.vcxproj  application.vcxproj.filters  application_example.vcxproj  application_example.vcxproj.filters  cmake_install.cmake
assets/: box_empty_raw.txt
common/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Common.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  common.vcxproj  common.vcxproj.filters  common_example.vcxproj  common_example.vcxproj.filters  example.cpp
common/include/lit/common/: array.hpp  random.hpp  time_utils.hpp
common/include/lit/common/algorithms/: fenwick_tree.hpp
common/include/lit/common/glm_ext/: comparators.hpp  region.hpp  transform.hpp
common/include/lit/common/images/: image.hpp  images.hpp  lodepng.hpp
common/src/: random.cpp
common/src/common/: time_utils.cpp
common/src/common/algorithms/: fenwick_tree.cpp
common/src/common/images/: images.cpp  lodepng.cpp
engine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Viewer.sln  cmake_install.cmake  engine.vcxproj  engine.vcxproj.filters  imgui.cmake  imgui.vcxproj  imgui.vcxproj.filters
engine/include/engine/: math.hpp  utils.hpp
engine/include/engine/collision/: bounding_volume.hpp  collider.hpp  collision_engine.hpp  shape.hpp  tree.hpp
engine/include/engine/physics/: arbiter.hpp  inertia.hpp  material.hpp  object.hpp  physics_engine.hpp
engine/include/lit/engine/: entity_view.hpp  resources_manager.hpp  scene.hpp
engine/include/lit/engine/algorithms/: allocator.hpp  fast_noise_lite.hpp  fenwick_tree.hpp
engine/include/lit/engine/components/: camera.hpp  sky_box.hpp  tag.hpp  transform.hpp  voxel_grid.hpp  voxel_world.hpp
engine/include/lit/engine/components/voxel_grid/: voxel_grid.hpp  voxel_grid_base.hpp  voxel_grid_dense.hpp  voxel_grid_dense_old.hpp  voxel_grid_octree.hpp  voxel_grid_sparse.hpp  voxel_grid_sparse_lod_data.hpp
engine/include/lit/engine/generators/: fnl.hpp  rand.hpp  treegen.hpp  worldgen.hpp
engine/include/lit/engine/systems/: debug_system.hpp  observer_input_controller  observer_input_controller.hpp  system.hpp
engine/include/lit/engine/systems/renderers/: camera_pre_renderer.hpp  sky_box_renderer.hpp  tone_mapping_renderer.hpp
engine/include/lit/engine/systems/voxels/: voxel_grid_gpu_data_manager.hpp  voxel_grid_lod_manager.hpp  voxel_renderer.hpp  voxel_world_generator.hpp  voxel_world_gpu_data_manager.hpp
engine/include/lit/engine/utilities/: allocator.hpp  array_view.hpp  voxel_grid_utils.hpp
engine/include/lit/viewer/: debug_options.hpp  debug_window.hpp  viewer_app.hpp  viewer_window.hpp
engine/src/: utils.cpp
engine/src/collision/: bounding_volume.cpp  collider.cpp  collision_engine.cpp  shape.cpp
engine/src/engine/: entity_view.cpp  resources_manager.cpp  scene.cpp
engine/src/engine/algorithms/: allocator.cpp  fenwick_tree.cpp
engine/src/engine/components/: camera.cpp  sky_box.cpp  voxel_grid_dense.cpp  voxel_grid_dense_old.cpp  voxel_tree.cpp  voxel_world.cpp
engine/src/engine/generators/: treegen.cpp  worldgen.cpp
engine/src/engine/systems/: camera_pre_renderer.cpp  debug_system.cpp  player_controller.cpp  sky_box_renderer.cpp  tone_mapping_renderer.cpp
engine/src/engine/systems/voxels/: voxel_grid_gpu_data_manager.cpp  voxel_renderer.cpp  voxel_world_generator.cpp  voxel_world_gpu_data_manager.cpp
engine/src/engine/utilities/: allocator.cpp  fenwick_tree.cpp
engine/src/physics/: constraint.cpp  inertia.cpp  material.cpp  object.cpp  physics_engine.cpp
engine/src/viewer/: debug_window.cpp  viewer_app.cpp  viewer_window.cpp
engine/test/: test_collision.cpp  test_collision_ddt.cpp
experiments/: CMakeLists.txt
experiments/src/: experiments_component.cpp  experiments_component.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp
experiments/src/shaders/: draw_primitive.hpp
graphics/: CMakeLists.txt  cmake_install.cmake  run.cpp
graphics/include/lit/gl/: assert.hpp  context.hpp  cubemap.hpp  frame_buffer.hpp  program.hpp  shader.hpp  texture.hpp  vertex_buffer.hpp
graphics/include/lit/rendering/: cpp_shader.hpp  cpp_shader_utils.hpp  pipeline_node.hpp
graphics/src/gl/: context.cpp  cubemap.cpp  frame_buffer.cpp  program.cpp  shader.cpp  texture.cpp  vertex_buffer.cpp
graphics/src/rendering/: cpp_shader.cpp  pipeline_node.cpp
rendering/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Rendering.sln  cmake_install.cmake  rendering.vcxproj  rendering.vcxproj.filters
rendering/include/lit/rendering/opengl/: api.hpp  frame_buffer.hpp  shader.hpp  texture.hpp  uniform_buffer.hpp  utils.hpp  vertex_array.hpp
rendering/src/opengl/: api.cpp  frame_buffer.cpp  shader.cpp  texture.cpp  uniform_buffer.cpp  vertex_array.cpp
voxels/: CMakeLists.txt
voxels/include/lit/voxels/: voxel_grid.hpp  voxel_grid_2.hpp  voxel_grid_with_lod.hpp  voxel_object.hpp  voxel_world.hpp
voxels/src/: debug_options.hpp  debug_ui.cpp  debug_ui.hpp  game_renderer.cpp  game_renderer.hpp
voxels/src/controls/: player_controller.cpp  player_controller.hpp
voxels/src/game_common/: voxel_grid.cpp  voxel_object.cpp  voxel_world.cpp
voxels/src/game_rendering/: camera.cpp  camera.hpp  voxels_pipeline.cpp  voxels_pipeline.hpp
voxels/src/game_rendering/shaders/: copy.hpp  debug.hpp  denoising.hpp  final.hpp  light_mixer.hpp  lighting.hpp  ray_tracing.hpp  reflections.hpp  taa.hpp
voxels/src/gpu_data_managers/: README.md  sky_box_loader.cpp  sky_box_loader.hpp  voxel_data_manager.cpp  voxel_data_manager.hpp
(+18 files in other folders)
